Pull data to frontend, repair API interval problems

--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="location-time">
-            <div class="location">🌍 Warsaw</div>
+            <div class="location">🌍 Błonie</div>
             <div id="time">🕘 09:03</div>
             <div id="date"></div>
         </div>
@@ -18,11 +18,11 @@
             <div id="temperature"></div>
             <div class="details">
                 <div class="detail">💧 Humidity: 41%</div>
-                <div class="detail">💨 Wind Speed: 2km/h</div>
-                <div class="detail">🔵 Pressure: 997hPa</div>
+                <div id="wind_speed">💨 Wind Speed: 2km/h</div>
+                <div id="pressure">🔵 Pressure: 997hPa</div>
                 <div class="detail">☀️ UV: 8</div>
-                <div class="sunrise">🌅 Sunrise: 06:37 AM</div>
-                <div class="sunset">🌇 Sunset: 20:37 PM</div>
+                <div id="sunrise">🌅 Sunrise: 06:37 AM</div>
+                <div id="sunset">🌇 Sunset: 20:37 PM</div>
             </div>
         </div>
         <div class="forecast">
