Added humidity to frontend + api

--- a/website/index.html
+++ b/website/index.html
@@ -17,10 +17,10 @@
         <div class="current-weather">
             <div id="temperature"></div>
             <div class="details">
-                <div class="detail">💧 Humidity: 41%</div>
+                <div id="humidity">💧 Humidity: 41%</div>
                 <div id="wind_speed">💨 Wind Speed: 2km/h</div>
                 <div id="pressure">🔵 Pressure: 997hPa</div>
-                <div class="detail">☀️ UV: 8</div>
+                <div class="detail">☔ Chance of precipitation: 4%</div>
                 <div id="sunrise">🌅 Sunrise: 06:37 AM</div>
                 <div id="sunset">🌇 Sunset: 20:37 PM</div>
             </div>
