--- a/website/index.html
+++ b/website/index.html
@@ -20,7 +20,7 @@
                 <div id="humidity">💧 Humidity: 41%</div>
                 <div id="wind_speed">💨 Wind Speed: 2km/h</div>
                 <div id="pressure">🔵 Pressure: 997hPa</div>
-                <div class="detail">☔ Chance of precipitation: 4%</div>
+                <div id="rain_precipitation">☔ Chance of precipitation: 4%</div>
                 <div id="sunrise">🌅 Sunrise: 06:37 AM</div>
                 <div id="sunset">🌇 Sunset: 20:37 PM</div>
             </div>
@@ -34,11 +34,11 @@
                 <div class="day">🌧️ Tuesday, 5 Sep: 16°C</div>
             </div>
             <div class="hourly">
-                <div class="hour">12:00 - ☀️ 26°C - 3km/h</div>
-                <div class="hour">15:00 - ☀️ 27°C - 2km/h</div>
-                <div class="hour">18:00 - ⛅ 27°C - 2km/h</div>
-                <div class="hour">21:00 - 🌥️ 25°C - 3km/h</div>
-                <div class="hour">00:00 - 🌙 22°C - 3km/h</div>
+                <div class="hour">12:00 - ☀️ 26°C - ☔ 4%</div>
+                <div class="hour">15:00 - ☀️ 27°C - ☔ 10%</div>
+                <div class="hour">18:00 - ⛅ 27°C - ☔ 15%</div>
+                <div class="hour">21:00 - 🌥️ 25°C - ☔ 50%</div>
+                <div class="hour">00:00 - 🌙 22°C - ☔ 30%</div>
             </div>
         </div>
     </div>
