--- a/website/index.html
+++ b/website/index.html
@@ -36,10 +36,10 @@
             </div>
             <div class="hourly">
                 <div id="hour">12:00 - ☀️ 26°C - ☔ 4%</div>
-                <div class="hour">15:00 - ☀️ 27°C - ☔ 10%</div>
-                <div class="hour">18:00 - ⛅ 27°C - ☔ 15%</div>
-                <div class="hour">21:00 - 🌥️ 25°C - ☔ 50%</div>
-                <div class="hour">00:00 - 🌙 22°C - ☔ 30%</div>
+                <div id="fourth_hour">15:00 - ☀️ 27°C - ☔ 10%</div>
+                <div id="seventh_hour">18:00 - ⛅ 27°C - ☔ 15%</div>
+                <div id="tenth_hour">21:00 - 🌥️ 25°C - ☔ 50%</div>
+                <div id="thirteen_hour">00:00 - 🌙 22°C - ☔ 30%</div>
             </div>
         </div>
     </div>
