Display median last days temperature on frontend

--- a/website/index.html
+++ b/website/index.html
@@ -28,11 +28,11 @@
         </div>
         <div class="forecast">
             <div class="five-day">
-                <div class="day">🌦️ Friday, 1 Sep: 20°C</div>
-                <div class="day">⛅ Saturday, 2 Sep: 22°C</div>
-                <div class="day">☀️ Sunday, 3 Sep: 27°C</div>
-                <div class="day">🌥️ Monday, 4 Sep: 18°C</div>
-                <div class="day">🌧️ Tuesday, 5 Sep: 16°C</div>
+                <div id="day">🌦️ Friday, 1 Sep: 20°C</div>
+                <div id="last_day">⛅ Saturday, 2 Sep: 22°C</div>
+                <div id="second_last_day">☀️ Sunday, 3 Sep: 27°C</div>
+                <div id="third_last_day">🌥️ Monday, 4 Sep: 18°C</div>
+                <div id="fourth_last_day">🌧️ Tuesday, 5 Sep: 16°C</div>
             </div>
             <div class="hourly">
                 <div id="hour">12:00 - ☀️ 26°C - ☔ 4%</div>
