--- a/website/index.html
+++ b/website/index.html
@@ -23,7 +23,6 @@
                 <div id="rain_precipitation">☔ Chance of precipitation: 4%</div>
                 <div id="sunrise">🌅 Sunrise: 06:37 AM</div>
                 <div id="sunset">🌇 Sunset: 20:37 PM</div>
-                <div id="lasthour"></div>
             </div>
         </div>
         <div class="forecast">
@@ -47,3 +46,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
+<!-- emoji ☁️🌦️⛅☀️🌙🌨️🌩️ -->
