Added preloader for website

--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,8 @@
     <link rel="icon" type="icon" href="images/weather-icon.png">
 </head>
 <body>
-    <div class="container">
+    <div id="loader"></div>
+    <div id="container">
         <div class="location-time">
             <div class="location">🌍 Błonie</div>
             <div id="time">🕘 09:03</div>
